# pi_3d

./: .gitignore  2024.md  Cargo.toml  README.md  Stages.txt  dump_graphviz.dot
crates/axis/: Cargo.toml
crates/axis/src/: axis.rs  interface.rs  lib.rs  shader.rs
crates/axis/src/assets/: axis.frag  axis.vert
crates/gltf2/: Cargo.toml
crates/gltf2/src/: base.rs  lib.rs  load.rs  particle_system.rs
crates/node_materials/: Cargo.toml
crates/node_materials/src/: animation.rs  animation_sys.rs  base.rs  command.rs  command_sys.rs  default_shader.rs  lib.rs  prelude.rs  value.rs
crates/node_materials/src/common/: color_gray.glsl  color_hsv.glsl  color_space.glsl  float.glsl  mod.rs  texture_channel.glsl  uv_atlas.glsl  uv_offset_speed.glsl  view_direction.glsl
crates/node_materials/src/cutoff/: cutoff.glsl  mod.rs
crates/node_materials/src/emissive/: emissive_base.glsl  emissive_base.rs  emissive_texture.glsl  emissive_texture.rs  emissive_texture_uv_offset_speed.rs  mod.rs
crates/node_materials/src/fog/: fog.glsl  mod.rs
crates/node_materials/src/fresnel/: emissive_fresnel.glsl  emissive_fresnel.rs  fresnel.glsl  fresnel.rs  mod.rs  opacity_fresnel.glsl  opacity_fresnel.rs
crates/node_materials/src/main_tex/: main_tex.glsl  mod.rs
crates/node_materials/src/mask_texture/: mask_texture.glsl  mod.rs
crates/node_materials/src/mix_texture/: mix_texture.glsl  mod.rs
crates/node_materials/src/opacity/: mod.rs  opacity.glsl  opacity_second.glsl
crates/node_materials/src/premultiply/: mod.rs
crates/node_materials/src/render/: pipeline.rs
crates/node_materials/src/shadowmapping/: mod.rs
crates/node_materials/src/uniforms/: float.rs  int.rs  mat2.rs  mat4.rs  mod.rs  sys_float.rs  sys_int.rs  sys_mat2.rs  sys_mat4.rs  sys_texture.rs  sys_uint.rs  sys_vec2.rs  sys_vec4.rs  texture.rs  texture_uniform.rs  uint.rs  uniform.rs  value_uniform.rs  vec2.rs  vec4.rs
crates/pi_engine_shell/: Cargo.toml
crates/pi_engine_shell/src/: assets.rs  bind_defines.rs  custom_rendertarget.rs  effect_sampler2d.rs  effect_texture2d.rs  engine_shell.rs  entity_ref.rs  error.rs  extends.rs  frame_time.rs  image_texture_load.rs  lib.rs  log.rs  object.rs  pass.rs  pipeline.rs  plugin.rs  prelude.rs  run_stage.rs  shell_node.rs
crates/pi_engine_shell/src/animation/: base.rs  command.rs  command_sys.rs  float.rs  int.rs  mod.rs  uint.rs  vec2.rs  vec3.rs  vec4.rs
crates/pi_engine_shell/src/assets/: environment_texture_loader.rs  image_texture_load.rs  image_texture_load_common.rs  local_load.rs  mod.rs  sync_load.rs  sync_load_option.rs
crates/pi_engine_shell/src/bind_groups/: model.rs  scene.rs  texture_sampler.rs
crates/pi_engine_shell/src/binds/: effect_sampler2d.rs  effect_texture2d.rs  effect_value.rs  mod.rs
crates/pi_engine_shell/src/interpolation/: base.rs  interpolation.rs  mod.rs
crates/pi_engine_shell/src/shader/: instance_code.rs  shader.rs  shader_effect_meta.rs  skin_code.rs  uniform_sampler.rs  uniform_texture.rs  uniform_value.rs  vs_begin_code.rs
crates/pi_mesh_builder/: Cargo.toml
crates/pi_mesh_builder/src/: axis.rs  lib.rs
crates/pi_mesh_builder/src/ball/: mod.rs
crates/pi_mesh_builder/src/cube/: mod.rs
crates/pi_mesh_builder/src/quad/: mod.rs
crates/pi_scene_context/: Cargo.toml
crates/pi_scene_context/src/: commands.rs  flags.rs  lib.rs  object.rs  plugin.rs  prelude.rs  run_stage.rs  state.rs  tree.rs
crates/pi_scene_context/src/animation/: base.rs  command.rs  command_sys.rs  interface.rs  listen.rs  mod.rs  prelude.rs  system.rs
crates/pi_scene_context/src/bindgroup/: mod.rs  uniform_buffer.rs
crates/pi_scene_context/src/cameras/: animation.rs  arc_rotate_camera.rs  camera.rs  camera_sys.rs  command.rs  command_sys.rs  free_camera.rs  interface.rs  mod.rs  prelude.rs  system.rs  target_camera.rs
crates/pi_scene_context/src/cullings/: base.rs  bounding.rs  bounding_sphere.rs  command.rs  command_sys.rs  mod.rs  oct_tree.rs  prelude.rs  quad_tree.rs  ray_test.rs  sys.rs
crates/pi_scene_context/src/engine/: mod.rs
crates/pi_scene_context/src/environment/: fog.rs  mod.rs
crates/pi_scene_context/src/flags/: enable.rs  mod.rs
crates/pi_scene_context/src/geometry/: base.rs  command.rs  command_sys.rs  geometry.rs  indices.rs  load.rs  mod.rs  prelude.rs  sys_vertex_buffer_use.rs  vertex_buffer.rs  vertex_buffer_useinfo.rs
crates/pi_scene_context/src/layer_mask/: base.rs  command.rs  command_sys.rs  interface.rs  mod.rs  prelude.rs
crates/pi_scene_context/src/light/: base.rs  command.rs  command_sys.rs  interface.rs  mod.rs  prelude.rs  system.rs  vertex.rs
crates/pi_scene_context/src/main_camera_render/: bind_group.rs  command.rs  draw_sort_sys.rs  graph.rs  interface.rs  mod.rs  pipeline.rs  renderer_binds_sys.rs
crates/pi_scene_context/src/materials/: bind_group.rs  command.rs  command_sys.rs  interface.rs  material.rs  material_meta.rs  mod.rs  prelude.rs  shader_effect.rs  system.rs  uniform_buffer.rs  value.rs
crates/pi_scene_context/src/meshes/: abstract_mesh.rs  mod.rs  (+14 more)
crates/pi_scene_shell/: Cargo.toml
crates/pi_scene_shell/src/: batch.rs  bind_defines.rs  custom_rendertarget.rs  effect_sampler2d.rs  effect_texture2d.rs  engine_shell.rs  entity_ref.rs  error.rs  frame_time.rs  lib.rs  lighting_shadow.rs  object.rs  pass.rs  pipeline.rs  plugin.rs  prelude.rs  run_stage.rs  setup.rs  shell_node.rs  static_string.rs  vertex_buffer_loader.rs  vertices.rs
crates/pi_skeleton/: Cargo.toml
crates/procedural_texture/: Cargo.toml
crates/procedural_texture/src/: lib.rs
crates/skybox/: Cargo.toml
crates/skybox/src/: bind_group.rs  command.rs  interface.rs  lib.rs  material.rs  material_sys.rs  pipeline.rs  shader.rs  texture.rs
crates/standard_material/: Cargo.toml
crates/standard_material/src/: bind_group.rs  block_lighting.rs  command.rs  define.rs  emissive.rs  interface.rs  lib.rs  lighting.glsl  pipeline.rs  shader.rs  standard.frag  standard.vert  standard_material.rs  standard_material_sys.rs
crates/trail/: Cargo.toml
crates/trail/src/: base.rs  command.rs  command_sys.rs  lib.rs  system.rs
(+744 files in other folders)
