[package]
name = "pi_3d"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "3D Framework for Scene."
repository = "https://github.com/GaiaWorld/pi_3d"
license = "MIT OR Apache-2.0"
keywords = ["3d scene"]

[workspace]
members = ["crates/*"]

[dependencies]
pi_scene_context = { path = "crates/pi_scene_context" }
pi_engine_shell = { path = "crates/pi_engine_shell" }
pi_mesh_builder = { path = "crates/pi_mesh_builder" }
default_render = { path = "crates/default_render" }
material_textures = { path = "crates/material_textures" }
skybox = { path = "crates/skybox" }
procedural_texture = { path = "crates/procedural_texture" }
skeletons = { path = "crates/skeletons" }
axis = { path = "crates/axis" }


unlit_material = { path = "crates/unlit_material" }
# standard_material = { path = "crates/standard_material" }

pi_render = { git = "https://github.com/GaiaWorld/pi_render", branch = "master-shader" }
render_utils = { git = "https://github.com/GaiaWorld/pi_render", branch = "master-shader" }
render_derive = { git = "https://github.com/GaiaWorld/pi_render", branch = "master-shader" }
render_compile = { git = "https://github.com/GaiaWorld/pi_render", branch = "master-shader" }
render_macro_utils = { git = "https://github.com/GaiaWorld/pi_render", branch = "master-shader" }

pi_scene_math = { git = "https://github.com/GaiaWorld/pi_scene" }
pi_animation = { git = "https://github.com/GaiaWorld/pi_animation.git" }
pi_curves = { git = "https://github.com/GaiaWorld/pi_curves.git" }

pi_ecs_macros = { git = "https://github.com/GaiaWorld/pi_ecs.git" }
pi_ecs_utils = { git = "https://github.com/GaiaWorld/pi_ecs_utils.git" }
pi_ecs = { git = "https://github.com/GaiaWorld/pi_ecs.git" }
pi_atom = { version="0.2", features = ["serde"] }
pi_hal = { git = "https://github.com/GaiaWorld/pi_hal.git" }

winit = { git = "http://ser.yinengyun.com:10082/tech/winit.git" }

pi_3d_loader = {path = "../pi_3d_loader"}
pi_async = "0.5"

wgpu = "0.13"
env_logger = "0.9"
log = "0.4"
smallvec = "1.9"
crossbeam="0.8"
futures = "0.3"
bytemuck = { version = "1.4", features = ["derive"] }

[patch."https://github.com/GaiaWorld/pi_ecs"]
pi_ecs = { path = "../pi_ecs" }

[patch."https://github.com/GaiaWorld/pi_hal"]
pi_hal = { path = "../pi_hal" }

[patch."https://github.com/GaiaWorld/pi_render"]
pi_render = { path = "../pi_render" }
render_utils = { path = "../pi_render/crates/render_utils" }
render_derive = { path = "../pi_render/crates/render_derive" }
render_compile = { path = "../pi_render/crates/render_compile" }
render_macro_utils = { path = "../pi_render/crates/render_macro_utils" }

[patch."https://github.com/GaiaWorld/pi_scene"]
pi_scene = { path = "../pi_scene" }
pi_scene_math = { path = "../pi_scene/crates/pi_scene_math" }

[patch."https://github.com/GaiaWorld/pi_animation"]
pi_animation = { path = "../pi_animation" }

[patch."https://github.com/GaiaWorld/pi_curves"]
pi_curves = { path = "../pi_curves" }

# [patch."http://ser.yinengyun.com:10082/tech/winit.git"]
# winit = { path = "../winit" }

[[example]]
name = "cube"
path = "examples/cube/cube.rs"

[[example]]
name = "unlit_cube"
path = "examples/cube/unlit_cube.rs"

[[example]]
name = "simple"
path = "examples/simple/simple.rs"

[[example]]
name = "quad"
path = "examples/quad/quad.rs"

[[example]]
name = "skybox"
path = "examples/skybox/skybox.rs"

[[example]]
name = "performance_static_render"
path = "examples/performance/static_10000.rs"

[[example]]
name = "performance_transform_render"
path = "examples/performance/transform_10000.rs"

[[example]]
name = "performance_static_instance"
path = "examples/performance/static_instance_10000.rs"

[[example]]
name = "performance_transform_instance"
path = "examples/performance/transform_instance_10000.rs"

[[example]]
name = "instance_color_tilloff"
path = "examples/instance/instance_color_tilloff.rs"

[[example]]
name = "oct_tree"
path = "examples/oct_tree/oct_tree.rs"

[[example]]
name = "noise"
path = "examples/ball/ball.rs"

[[example]]
name = "cloud"
path = "examples/procedural_texture/cloud.rs"

[[example]]
name = "water"
path = "examples/procedural_texture/water.rs"

[[example]]
name = "brdf"
path = "examples/procedural_texture/brdf.rs"

# [[example]]
# name = "skin"
# path = "examples/skin/skin.rs"

[[example]]
name = "axis"
path = "examples/axis/axis.rs"

[[example]]
name = "skin_simple"
path = "examples/skeleton/simple.rs"

[[example]]
name = "anime_01"
path = "examples/anime/01.rs"

[[example]]
name = "anime_camera"
path = "examples/anime/camera.rs"

[[example]]
name = "anime_performance"
path = "examples/anime/performance.rs"

[[example]]
name = "simple_skin"
path = "examples/gltf/simple_skin.rs"

[[example]]
name = "simple_anim"
path = "examples/gltf/simple_anim.rs"