[package]
name = "pi_3d"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "3D Framework for Scene."
repository = "https://github.com/GaiaWorld/pi_3d"
license = "MIT OR Apache-2.0"
keywords = ["3d scene"]

[workspace]
members = ["crates/*"]

[dependencies]
pi_scene_context        = { path = "crates/pi_scene_context" }
pi_engine_shell         = { path = "crates/pi_engine_shell" }
pi_mesh_builder         = { path = "crates/pi_mesh_builder" }
default_render          = { path = "crates/default_render" }
material_textures       = { path = "crates/material_textures" }
skybox                  = { path = "crates/skybox" }
procedural_texture      = { path = "crates/procedural_texture" }
skeletons               = { path = "crates/skeletons" }
axis                    = { path = "crates/axis" }

particle                = { path = "crates/particle" }
pi_gltf2_load           = { path = "crates/gltf2" }

pi_node_materials       = { path = "crates/node_materials" }
unlit_material          = { path = "crates/unlit_material" }
# standard_material = { path = "crates/standard_material" }

pi_render               = { git = "https://github.com/GaiaWorld/pi_render", branch = "bevy_shader" }
render_utils            = { git = "https://github.com/GaiaWorld/pi_render", branch = "bevy_shader" }
render_derive           = { git = "https://github.com/GaiaWorld/pi_render", branch = "bevy_shader" }
render_compile          = { git = "https://github.com/GaiaWorld/pi_render", branch = "bevy_shader" }

pi_bevy_render_plugin   = { git = "https://github.com/GaiaWorld/pi_render_bevy"}
pi_bevy_winit_window    = { git = "https://github.com/GaiaWorld/pi_render_bevy"}
pi_bevy_post_process    = { git = "https://github.com/GaiaWorld/pi_render_bevy"}
pi_bevy_ecs_extend      = { git = "https://github.com/GaiaWorld/pi_render_bevy"}
pi_bevy_asset           = { git = "https://github.com/GaiaWorld/pi_render_bevy"}

pi_scene_math           = { git = "https://github.com/GaiaWorld/pi_scene" }
pi_animation            = { git = "https://github.com/GaiaWorld/pi_animation.git" }
pi_curves               = { git = "https://github.com/GaiaWorld/pi_curves.git" }
pi_postprocess          = { git = "https://github.com/GaiaWorld/pi_post_process.git" }

pi_atom                 = { version="0.2", features = ["serde"] }
pi_hal                  = { git = "https://github.com/GaiaWorld/pi_hal.git" }

pi_assets               = "0.13"
pi-async-rt             = "0.1"

wgpu                = "0.15"
bevy                = { version="0.10", default-features = false }
bevy_mod_debugdump  = { version="0.7" }

log                 = "0.4"
env_logger          = "0.9"

smallvec            = "1.9"
crossbeam           = "0.8"
futures             = "0.3"
bytemuck            = { version = "1.4", features = ["derive"] }

[patch."https://github.com/GaiaWorld/pi_render"]
pi_render = { path = "../pi_render" }
render_utils = { path = "../pi_render/crates/render_utils" }
render_derive = { path = "../pi_render/crates/render_derive" }
render_compile = { path = "../pi_render/crates/render_compile" }

[patch."https://github.com/GaiaWorld/pi_render_bevy"]
pi_bevy_render_plugin = { path="../pi_render_bevy/crates/render" }
pi_bevy_winit_window = { path="../pi_render_bevy/crates/winit_window" }
pi_bevy_post_process = { path="../pi_render_bevy/crates/post_process" }
pi_bevy_ecs_extend = { path="../pi_render_bevy/crates/ecs_extend" }
pi_bevy_asset = { path="../pi_render_bevy/crates/asset" }
pi_window_renderer = { path="../pi_render_bevy/crates/window_renderer" }

[patch."https://github.com/GaiaWorld/pi_scene"]
pi_scene = { path = "../pi_scene" }
pi_scene_math = { path = "../pi_scene/crates/pi_scene_math" }

[patch."https://github.com/GaiaWorld/pi_animation"]
pi_animation = { path = "../pi_animation" }

[patch."https://github.com/GaiaWorld/pi_curves"]
pi_curves = { path = "../pi_curves" }

[patch."https://github.com/GaiaWorld/pi_post_process.git"]
pi_postprocess = { path = "../pi_post_process" }

[patch."https://github.com/GaiaWorld/pi_gltf.git"]
pi_gltf = { path = "../pi_gltf" }

[patch."http://ser.yinengyun.com:10082/tech/winit.git"]
winit = { path = "../winit" }

[patch."https://github.com/GaiaWorld/pi_hal"]
pi_hal = { path = "../pi_hal" }

# [patch.crates-io]
# pi_assets = {path = "../pi_assets"}
# pi_async_graph = {path = "../pi_async_graph"}

[dev-dependencies]
bevy                = { version="0.10", default-features = false, features=["bevy_winit"] }

[[example]]
name = "cube"
path = "examples/cube/cube.rs"

[[example]]
name = "unlit_cube"
path = "examples/cube/unlit_cube.rs"
# 
# [[example]]
# name = "simple"
# path = "examples/simple/simple.rs"
# 
# [[example]]
# name = "quad"
# path = "examples/quad/quad.rs"
# 
# [[example]]
# name = "skybox"
# path = "examples/skybox/skybox.rs"
# 
# [[example]]
# name = "performance_static_render"
# path = "examples/performance/static_10000.rs"
# 
# [[example]]
# name = "performance_transform_render"
# path = "examples/performance/transform_10000.rs"
# 
# [[example]]
# name = "performance_static_instance"
# path = "examples/performance/static_instance_10000.rs"
# 
# [[example]]
# name = "performance_transform_instance"
# path = "examples/performance/transform_instance_10000.rs"
# 
# [[example]]
# name = "instance_color_tilloff"
# path = "examples/instance/instance_color_tilloff.rs"
# 
# [[example]]
# name = "oct_tree"
# path = "examples/oct_tree/oct_tree.rs"
# 
# [[example]]
# name = "noise"
# path = "examples/ball/ball.rs"
# 
# [[example]]
# name = "cloud"
# path = "examples/procedural_texture/cloud.rs"
# 
# [[example]]
# name = "water"
# path = "examples/procedural_texture/water.rs"
# 
# [[example]]
# name = "brdf"
# path = "examples/procedural_texture/brdf.rs"
# 
# # [[example]]
# # name = "skin"
# # path = "examples/skin/skin.rs"
# 
# [[example]]
# name = "axis"
# path = "examples/axis/axis.rs"

[[example]]
name = "skin_simple"
path = "examples/skeleton/simple.rs"

[[example]]
name = "anime_01"
path = "examples/anime/01.rs"

[[example]]
name = "anime_rotation"
path = "examples/anime/02.rs"

[[example]]
name = "anime_camera"
path = "examples/anime/camera.rs"

[[example]]
name = "anime_performance"
path = "examples/anime/performance.rs"
# 
# [[example]]
# name = "lighting_01"
# path = "examples/lighting/01.rs"
# 
# [[example]]
# name = "particle01"
# path = "examples/particles/01.rs"
[[example]]
name = "particle00"
path = "examples/particles/00.rs"
# 
# [[example]]
# name = "particle01"
# path = "examples/particles/01.rs"
# 
# [[example]]
# name = "particle02"
# path = "examples/particles/02.rs"
# 
# [[example]]
# name = "particle03"
# path = "examples/particles/03.rs"

[[example]]
name = "main_opacity"
path = "examples/effects/main_opacity.rs"

[[example]]
name = "opacity_clip"
path = "examples/effects/opacity_clip.rs"

[[example]]
name = "emissive_fresnel"
path = "examples/effects/emissive_fresnel.rs"

[[example]]
name = "main_opacity_fresnel"
path = "examples/effects/main_opacity_fresnel.rs"

[[example]]
name = "two_opacity_mix"
path = "examples/effects/two_opacity_mix.rs"

[[example]]
name = "stripes_virtual"
path = "examples/effects/stripes_virtual.rs"

[[example]]
name = "distortion_uv"
path = "examples/effects/distortion_uv.rs"

[[example]]
name = "anime_opacity_clip"
path = "examples/anime/opacity_clip.rs"

[[example]]
name = "anime_main_opacity"
path = "examples/anime/main_opacity.rs"

[[example]]
name = "gltf_load"
path = "examples/gltf/gltfload.rs"

[[example]]
name = "image_load"
path = "examples/gltf/img_texture_load.rs"
