[package]
name = "axis"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "3D Framework for Scene."
repository = "https://github.com/GaiaWorld/pi_3d"
license = "MIT OR Apache-2.0"
keywords = ["skeletons"]

[dependencies]
pi_share        = "0.4"
pi_slotmap = "0.1"
pi_hash         = "0.1"
pi_assets       = "0.13"
pi_atom         = { version="0.2", features = ["serde"] }

wgpu            = { version = "0.16", default-features = false }
naga            = { version = "0.12", features = [ "glsl-in", ] }
bevy            = { version="0.11", default-features = false }

log             = "0.4"
env_logger      = "0.9"

smallvec        = "1.9"
crossbeam       = "0.8"
futures         = "0.3"
derive_deref    = "1.1"
bytemuck        = { version = "1.4", features = ["derive"] }


pi_render           = { version = "0.1", registry = "yn" }
render_utils        = { version = "0.1", registry = "yn" }
render_derive       = { version = "0.1", registry = "yn" }

pi_scene_math       = { git = "https://github.com/GaiaWorld/pi_scene" }

pi_scene_context    = { path = "../pi_scene_context" }
pi_engine_shell     = { path = "../pi_engine_shell" }
pi_node_materials   = { path = "../node_materials" }
