[package]
name = "pi_gltf2_load"
version = "0.0.8"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "GLTF2 Res Manager."
repository = "https://github.com/GaiaWorld/pi_3d"
license = "MIT OR Apache-2.0"
keywords = ["GLTF2 Res"]

[dependencies]
pi_futures      = "0.1"
pi-async-rt     = "0.1"
pi_share        = "0.4"
pi_hash         = "0.1"
pi_assets       = "0.13"
pi_time         = "0.3"
pi_atom         = { version = "0.5", features = ["serde"] }

wgpu            = { version = "0.1", registry = "yn", package = "pi_wgpu" }
naga            = { version = "0.19", features = [ "glsl-in", ] }
bevy_ecs        = "0.11"
bytemuck        = { version = "1.4", features = ["derive"] }

log             = "0.4"

smallvec        = "1.9"
crossbeam       = "0.8"
futures         = "0.3"
derive_deref    = "1.1"
base64          = "0.21"

pi_hal              = { version = "0.1", registry = "yn" }

pi_render           = { version = "0.1", registry = "yn" }
render_utils        = { version = "0.1", registry = "yn" }
render_derive       = { version = "0.1", registry = "yn" }

pi_scene_math       = { version = "0.0.*", registry = "yn" }
pi_animation        = { version = "0.1", registry = "yn" }
pi_curves           = { version = "0.1", registry = "yn" }
pi_gltf             = { version = "0.1", registry = "yn", features = ["extras"] }

pi_scene_context    = { version = "0.0.*", registry = "yn", path = "../pi_scene_context" }
pi_scene_shell      = { version = "0.0.*", registry = "yn", path = "../pi_scene_shell" }
pi_node_materials   = { version = "0.0.*", registry = "yn", path = "../node_materials" }
pi_particle_system  = { version = "0.0.*", registry = "yn", path = "../particle_system" }