[package]
name = "pi_engine_shell"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "Framework."
repository = "https://github.com/GaiaWorld/pi_3d"
license = "MIT OR Apache-2.0"
keywords = ["pi engine"]

[dependencies]
wgpu = "0.15"
env_logger = "0.9"
log = "0.4"
smallvec = "1.9"
crossbeam="0.8"
futures = "0.3"
bevy={version="0.10", default-features = false}

parry3d = "0.9"
lazy_static = "1.4"
pi_spatial = { git = "https://github.com/GaiaWorld/pi_spatial.git" }
ncollide3d = "0.33"

approx = "0.5"
naga = { version = "0.10", features = [
    "glsl-in",
    "spv-in",
    "spv-out",
    "wgsl-in",
    "wgsl-out",
] }
bytemuck = { version = "1.4", features = ["derive"] }

image = "0.24"
winit = { git = "http://ser.yinengyun.com:10082/tech/winit.git" }
pollster = "0.2"
spin_sleep = "1.1"
derive_deref = "1.1"

pi_slotmap = "0.1"
pi_hash = "0.1"
pi_share = "0.4"
pi_graph = "0.1"


pi_atom = { version="0.2", features = ["serde"] }
pi_assets = "0.11"
pi_futures = "0.1"
pi_async = "0.5"
pi_idtree = "0.1"
pi_slotmap_tree = "0.3"
pi_ecs_macros = { git = "https://github.com/GaiaWorld/pi_ecs.git" }
pi_ecs_utils = { git = "https://github.com/GaiaWorld/pi_ecs_utils.git" }
pi_ecs = { git = "https://github.com/GaiaWorld/pi_ecs.git" }
pi_hal = { git = "https://github.com/GaiaWorld/pi_hal.git" }

pi_bevy_ecs_extend = { git = "https://github.com/GaiaWorld/pi_render_bevy"}
pi_bevy_winit_window = { git = "https://github.com/GaiaWorld/pi_render_bevy"}
pi_bevy_render_plugin = { git = "https://github.com/GaiaWorld/pi_render_bevy"}
pi_bevy_asset = { git = "https://github.com/GaiaWorld/pi_render_bevy"}
pi_window_renderer = { git = "https://github.com/GaiaWorld/pi_render_bevy"}

pi_render = { git = "https://github.com/GaiaWorld/pi_render", branch = "bevy_shader" }
render_utils = { git = "https://github.com/GaiaWorld/pi_render", branch = "bevy_shader" }
render_derive = { git = "https://github.com/GaiaWorld/pi_render", branch = "bevy_shader" }

pi_scene_math = { git = "https://github.com/GaiaWorld/pi_scene" }



