[package]
name = "pi_engine_shell"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "Framework."
repository = "https://github.com/GaiaWorld/pi_3d"
license = "MIT OR Apache-2.0"
keywords = ["pi engine"]

[dependencies]
log                 = "0.4"
env_logger          = "0.9"
wgpu                = "0.16"
naga                = { version = "0.12", features = [ "glsl-in", ] }
bevy                = { version = "0.11", default-features = false }

smallvec            = "1.9"
crossbeam           = "0.8"
futures             = "0.3"

parry3d             = "0.13"
lazy_static         = "1.4"
pi_spatial          = "0.4"


approx              = "0.5"
bytemuck            = { version = "1.4", features = ["derive"] }

winit               = { version = "0.27", registry = "yn" }
pollster            = "0.2"
spin_sleep          = "1.1"
derive_deref        = "1.1"

pi_slotmap = "0.1"
pi_hash             = "0.1"
pi_share            = "0.4"

pi_time             = "0.3"


pi_atom             = { version="0.2", features = ["serde"] }

pi_assets           = "0.13"
pi_futures          = "0.1"

pi-async-rt             = "0.1"
pi_slotmap_tree     = "0.3"
pi_hal              = { version = "0.1", registry = "yn" }

pi_bevy_ecs_extend      = { version = "0.1", registry = "yn" }
pi_bevy_winit_window    = { version = "0.1", registry = "yn" }
pi_bevy_render_plugin   = { version = "0.1", registry = "yn" }
pi_bevy_asset           = { version = "0.1", registry = "yn" }
pi_window_renderer      = { version = "0.1", registry = "yn" }

pi_render               = { version = "0.1", registry = "yn" }
render_utils            = { version = "0.1", registry = "yn" }
render_derive           = { version = "0.1", registry = "yn" }

pi_scene_math           = { git = "https://github.com/GaiaWorld/pi_scene" }
pi_animation            = { version = "0.1", registry = "yn" }
pi_curves               = { version = "0.1", registry = "yn" }



