[package]
name = "pi_mesh_builder"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "mesh builder."
repository = "https://github.com/GaiaWorld/pi_3d"
license = "MIT OR Apache-2.0"
keywords = ["3d scene"]

[dependencies]
pi_share        = "0.4"
pi_slotmap = "0.1"
pi_hash         = "0.1"
pi_assets       = "0.13"
pi_atom         = { version="0.2", features = ["serde"] }

wgpu            = { version = "0.1", registry = "yn", package = "pi_wgpu" }
naga            = { version = "0.12", features = [ "glsl-in", ] }
bevy            = { version = "0.11", default-features = false }

log             = "0.4"
env_logger      = "0.9"

smallvec        = "1.9"
crossbeam       = "0.8"
futures         = "0.3"
derive_deref    = "1.1"
bytemuck        = { version = "1.4", features = ["derive"] }


pi_render           = { version = "0.1", registry = "yn" }
render_utils        = { version = "0.1", registry = "yn" }
render_derive       = { version = "0.1", registry = "yn" }

pi_scene_math       = { git = "https://github.com/GaiaWorld/pi_scene" }

pi_engine_shell     = { path = "../pi_engine_shell" }

[patch."https://github.com/GaiaWorld/pi_animation"]
pi_animation = { path = "../../../pi_animation" }

[patch."https://github.com/GaiaWorld/pi_render"]
pi_render = { path = "../../../pi_render" }
render_utils = { path = "../../../pi_render/crates/render_utils" }
render_derive = { path = "../../../pi_render/crates/render_derive" }

[patch."https://github.com/GaiaWorld/pi_scene"]
pi_scene = { path = "../../../pi_scene" }
pi_scene_math = { path = "../../../pi_scene/crates/pi_scene_math" }

[patch."https://github.com/GaiaWorld/pi_hal"]
pi_hal = { path = "../../../pi_hal" }

[patch."http://ser.yinengyun.com:10082/tech/winit.git"]
winit = { path = "../../../winit" }

[net]
git-fetch-with-cli = true
offline = true
