[package]
name = "pi_mesh_builder"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "mesh builder."
repository = "https://github.com/GaiaWorld/pi_3d"
license = "MIT OR Apache-2.0"
keywords = ["3d scene"]

[dependencies]
pi_share        = "0.4"
pi_slotmap = "0.1"
pi_hash         = "0.1"
pi_assets       = "0.13"
pi_atom         = { version="0.5", features = ["serde"] }

wgpu            = { version = "0.1", registry = "yn", package = "pi_wgpu" }
naga            = { version = "0.12", features = [ "glsl-in", ] }
bevy_ecs = "0.11"
bevy_app = "0.11"

log             = "0.4"
env_logger      = "0.9"

smallvec        = "1.9"
crossbeam       = "0.8"
futures         = "0.3"
derive_deref    = "1.1"
bytemuck        = { version = "1.4", features = ["derive"] }

render_utils        = { version = "0.1", registry = "yn" }
render_derive       = { version = "0.1", registry = "yn" }
pi_scene_math       = { version = "0.0.3", registry = "yn" }
pi_scene_shell      = { version = "0.0.1", registry = "yn", path = "../pi_scene_shell" }

[net]
git-fetch-with-cli = true
offline = true
